fix(drawer): make elements interactable behind a drawer without mask

--- a/bricks/containers/src/drawer/drawer.shadow.css
+++ b/bricks/containers/src/drawer/drawer.shadow.css
@@ -9,7 +9,6 @@
 .drawer.open {
   width: 100%;
   transition: transform 0.3s cubic-bezier(0.7, 0.3, 0.1, 1);
-  pointer-events: auto;
 }
 
 .drawer > * {
@@ -36,6 +35,11 @@
 
 .drawer-right {
   right: 0;
+}
+
+.mask,
+.drawer-wrapper {
+  pointer-events: auto;
 }
 
 .mask {
